# disposable_email

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  __init__.py  config.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.cfg.old  setup.py
_explore/: 10minutemail.ipynb  GuerrillaMail_explore.ipynb  MailSlurp_explore.ipynb  async_GuerrillaMail_explore.py  email_validates_explore.ipynb  scratchpad.ipynb
clients/: GuerillaMail.py
disposable_email/: DisposableEmail.py  GuerillaMail.py  GuerrillaMail.py  MailSlurp.py  __init__.py
email_clients/: MailSlurp.py  __init__.py
tests/: test_DisposableEmail.py  test_GuerillaMail.py  test_GuerrillaMail.py  tests_basic.py
