[metadata]
# This is required for any package to install with a name
name = disposable_email
version = attr: disposable_email.__version__
# If you want to publish on PyPI then the following are also required
# https://daveshawley.medium.com/safely-using-setup-cfg-for-metadata-1babbe54c108
# Either (author and author_email) or (maintainer and maintainer_email) must be supplied
url = https://github.com/ajanaderson1/
author = AJ Anderson
author_email = ajanaderson1@gmail.com


# If you are using the "src" layout then we need add: `package_dir = src` & `[options.packages.find] where=src`.  See: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html

[options]
packages = find: