[metadata]
name = disposable_email
version = file: VERSION
url = https://github.com/ajanderson1/
author = AJ Anderson
author_email = ajanderson1@gmail.com

[options]
packages = find:

install_requires =
    # python-guerrillamail==0.2.0
    mailslurp-client==15.13.29  
    rich==12.5.1
    polling2==0.5.0

include_package_data = True
    